package hotel.enums;

public enum EtatChambre {
    DISPONIBLE,
    OCCUPEE,
    MAINTENANCE,
    RESERVEE
}
