package hotel.enums;

public enum TypeChambre {
    SIMPLE,
    DOUBLE,
    SUITE
}
