package hotel.enums;

public enum TypeService {
    REPAS,
    ROOM_SERVICE,
    SPA,
    PARKING
}
