package hotel.observer;

public interface RecoitNotification {
    void notifier(String message);
}
